--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <h3 class="my-profession">I' m a <span class="typing">Programmer</span></h3>
                             <p><i>I can create wonders with programming languages especially JAVA and HTML</i></p>
                             <a href="#contact" class="btn hire-me">Connect</a>
-                            <a href="Resume Final- Google Docs (1).pdf" download class="btn w">Download CV</a>
+                            <a href="" download class="btn w">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="image/img4.jpg" alt="">
